set up containers needed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,130 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="sidebar">
+        <div class="Dashboard">
+            <div class="Logo">xxx</div>
+            <div class="Dashboard-Name">Dashboard</div>
+        </div>
+        <div class="main-buttons">
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+        </div>
+        <div class="support-buttons">
+            <ul>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="top-bar">
+        <div class="content">
+            <div class="search-bar">
+                <button name="search">search pic</button>
+                <input type="text" placeholder="Search">
+                <button name="notification">N</button>
+                <button name="account">
+                    <div class="profile-pic">
+                        profile pic
+                    </div>
+                    <div>
+                        username
+                    </div>
+                </button>
+            </div>
+            <div class="greeting">
+                <div class="profile-pic">xxx</div>
+                <div class="greeting">
+                    <div>Hey there,</div>
+                    <div>Username (@username)</div>
+                </div>
+                <button>new</button>
+                <button>upload</button>
+                <button>share</button>                
+        </div>
+    </div>
+    
+    <div class="content">
+        <div class="projects">
+            <div class="title">Your Projects</div>
+            <div class="your-projects">
+                <div class="project-card">
+                    <div class="title"></div>
+                    <div class="content"></div>
+                    <div class="links">
+                        <div class="star"><button></button></div>
+                        <div class="peak"><button></button></div>
+                        <div class="fork"><button></button></div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="title"></div>
+                    <div class="content"></div>
+                    <div class="links">
+                        <div class="star"><button></button></div>
+                        <div class="peak"><button></button></div>
+                        <div class="fork"><button></button></div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="title"></div>
+                    <div class="content"></div>
+                    <div class="links">
+                        <div class="star"><button></button></div>
+                        <div class="peak"><button></button></div>
+                        <div class="fork"><button></button></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="announcements">
+            <div class="title">Announcements</div>
+            <div class="current-announcements">
+                <div>
+                    <div class="title">New Stuff</div>
+                    <div class="content">bah bah bah</div>
+                </div>
+                <div>
+                    <div class="title">Site Maintencance</div>
+                    <div class="content">we did all of these things to the site</div>
+                </div>
+                <div>
+                    <div class="title">Privacy Policy</div>
+                    <div class="content">we updated the following...</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="trending">
+            <div class="title">Trending</div>
+            <div class="current-trending">
+                <div class="trending-card">
+                    <div class="profile-pic"></div>
+                    <div class="title"></div>
+                    <div class="content"></div>
+                </div>
+                <div class="trending-card">
+                    <div class="profile-pic"></div>
+                    <div class="title"></div>
+                    <div class="content"></div>
+                </div>
+                <div class="trending-card">
+                    <div class="profile-pic"></div>
+                    <div class="title"></div>
+                    <div class="content"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
