--- a/index.html
+++ b/index.html
@@ -3,29 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
-<body>
+
+<body class="roboto-regular">
     <div class="sidebar">
         <div class="Dashboard">
-            <div class="Logo">xxx</div>
+            <div class="Logo"><span class="material-symbols-outlined">graphic_eq</span></div>
             <div class="Dashboard-Name">Dashboard</div>
         </div>
         <div class="main-buttons">
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><span class="material-symbols-outlined">home</span>Home</li>
+                <li><span class="material-symbols-outlined">person</span>Profile</li>
+                <li><span class="material-symbols-outlined">home</span>Messages</li>
+                <li><span class="material-symbols-outlined">schedule</span>History</li>
+                <li><span class="material-symbols-outlined">bookmark</span>Tasks</li>
+                <li><span class="material-symbols-outlined">group</span>Communities</li>
             </ul>
         </div>
         <div class="support-buttons">
             <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><span class="material-symbols-outlined">settings</span>Settings</li>
+                <li><span class="material-symbols-outlined">help</span>Support</li>
+                <li><span class="material-symbols-outlined">info</span>Privacy</li>
+                
             </ul>
         </div>
     </div>
@@ -33,76 +41,103 @@
     <div class="top-bar">
         <div class="content">
             <div class="search-bar">
-                <button name="search">search pic</button>
                 <input type="text" placeholder="Search">
-                <button name="notification">N</button>
+                <button name="notification">🔔</button>
                 <button name="account">
-                    <div class="profile-pic">
-                        profile pic
-                    </div>
+                    <div class="profile-pic"></div>
                     <div>
                         username
                     </div>
                 </button>
             </div>
             <div class="greeting">
-                <div class="profile-pic">xxx</div>
+                <div class="profile-pic"></div>
                 <div class="greeting">
                     <div>Hey there,</div>
                     <div>Username (@username)</div>
                 </div>
                 <button>new</button>
                 <button>upload</button>
-                <button>share</button>                
+                <button>share</button>    
+            </div>                
         </div>
     </div>
+
     
     <div class="content">
         <div class="projects">
             <div class="title">Your Projects</div>
             <div class="your-projects">
                 <div class="project-card">
-                    <div class="title"></div>
-                    <div class="content"></div>
+                    <div class="title">Project Title</div>
+                    <div class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</div>
                     <div class="links">
-                        <div class="star"><button></button></div>
-                        <div class="peak"><button></button></div>
-                        <div class="fork"><button></button></div>
+                        <div class="star"><button><span class="material-symbols-outlined">star</span></button></div>
+                        <div class="peak"><button><span class="material-symbols-outlined">visibility</span></button></div>
+                        <div class="fork"><button><span class="material-symbols-outlined">share</span></button></div>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="title"></div>
-                    <div class="content"></div>
+                    <div class="title">Project Title</div>
+                    <div class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</div>
                     <div class="links">
-                        <div class="star"><button></button></div>
-                        <div class="peak"><button></button></div>
-                        <div class="fork"><button></button></div>
+                        <div class="star"><button><span class="material-symbols-outlined">star</span></button></div>
+                        <div class="peak"><button><span class="material-symbols-outlined">visibility</span></button></div>
+                        <div class="fork"><button><span class="material-symbols-outlined">share</span></button></div>
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="title"></div>
-                    <div class="content"></div>
+                    <div class="title">Project Title</div>
+                    <div class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</div>
                     <div class="links">
-                        <div class="star"><button></button></div>
-                        <div class="peak"><button></button></div>
-                        <div class="fork"><button></button></div>
+                        <div class="star"><button><span class="material-symbols-outlined">star</span></button></div>
+                        <div class="peak"><button><span class="material-symbols-outlined">visibility</span></button></div>
+                        <div class="fork"><button><span class="material-symbols-outlined">share</span></button></div>
                     </div>
                 </div>
+                <div class="project-card">
+                    <div class="title">Project Title</div>
+                    <div class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</div>
+                    <div class="links">
+                        <div class="star"><button><span class="material-symbols-outlined">star</span></button></div>
+                        <div class="peak"><button><span class="material-symbols-outlined">visibility</span></button></div>
+                        <div class="fork"><button><span class="material-symbols-outlined">share</span></button></div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="title">Project Title</div>
+                    <div class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</div>
+                    <div class="links">
+                        <div class="star"><button><span class="material-symbols-outlined">star</span></button></div>
+                        <div class="peak"><button><span class="material-symbols-outlined">visibility</span></button></div>
+                        <div class="fork"><button><span class="material-symbols-outlined">share</span></button></div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="title">Project Title</div>
+                    <div class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</div>
+                    <div class="links">
+                        <div class="star"><button><span class="material-symbols-outlined">star</span></button></div>
+                        <div class="peak"><button><span class="material-symbols-outlined">visibility</span></button></div>
+                        <div class="fork"><button><span class="material-symbols-outlined">share</span></button></div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
         <div class="announcements">
             <div class="title">Announcements</div>
-            <div class="current-announcements">
-                <div>
+            <div class="announcements-box">
+                <div class="box">
                     <div class="title">New Stuff</div>
                     <div class="content">bah bah bah</div>
                 </div>
-                <div>
+                <div class="box">
                     <div class="title">Site Maintencance</div>
                     <div class="content">we did all of these things to the site</div>
                 </div>
-                <div>
+                <div class="box">
                     <div class="title">Privacy Policy</div>
                     <div class="content">we updated the following...</div>
                 </div>
@@ -111,21 +146,21 @@
 
         <div class="trending">
             <div class="title">Trending</div>
-            <div class="current-trending">
-                <div class="trending-card">
+            <div class="announcements-box">
+                <div class="trending-card box">
                     <div class="profile-pic"></div>
-                    <div class="title"></div>
-                    <div class="content"></div>
+                    <div class="title">Trending Title</div>
+                    <div class="content">Information about what is currently trending</div>
                 </div>
-                <div class="trending-card">
+                <div class="trending-card box">
                     <div class="profile-pic"></div>
-                    <div class="title"></div>
-                    <div class="content"></div>
+                    <div class="title">Trending Title</div>
+                    <div class="content">Information about what is currently trending</div>
                 </div>
-                <div class="trending-card">
+                <div class="trending-card box">
                     <div class="profile-pic"></div>
-                    <div class="title"></div>
-                    <div class="content"></div>
+                    <div class="title">Trending Title</div>
+                    <div class="content">Information about what is currently trending</div>
                 </div>
             </div>
         </div>
